@@ -20,6 +20,7 @@ Contributors:
 
 #include <assert.h>
 
+#include "callbacks.h"
 #include "mosquitto.h"
 #include "logging_mosq.h"
 #include "memory_mosq.h"
@@ -29,32 +30,6 @@ Contributors:
 #include "packet_mosq.h"
 #include "property_mosq.h"
 #include "read_handle.h"
-
-static void connack_callback(struct mosquitto *mosq, uint8_t reason_code, uint8_t connect_flags, const mosquitto_property *properties)
-{
-	log__printf(mosq, MOSQ_LOG_DEBUG, "Client %s received CONNACK (%d)", mosq->id, reason_code);
-	if(reason_code == MQTT_RC_SUCCESS){
-		mosq->reconnects = 0;
-	}
-	pthread_mutex_lock(&mosq->callback_mutex);
-	if(mosq->on_connect){
-		mosq->in_callback = true;
-		mosq->on_connect(mosq, mosq->userdata, reason_code);
-		mosq->in_callback = false;
-	}
-	if(mosq->on_connect_with_flags){
-		mosq->in_callback = true;
-		mosq->on_connect_with_flags(mosq, mosq->userdata, reason_code, connect_flags);
-		mosq->in_callback = false;
-	}
-	if(mosq->on_connect_v5){
-		mosq->in_callback = true;
-		mosq->on_connect_v5(mosq, mosq->userdata, reason_code, connect_flags, properties);
-		mosq->in_callback = false;
-	}
-	pthread_mutex_unlock(&mosq->callback_mutex);
-}
-
 
 int handle__connack(struct mosquitto *mosq)
 {
@@ -78,7 +53,8 @@ int handle__connack(struct mosquitto *mosq)
 			 * it has replied with "unacceptable protocol version", but with a
 			 * v3 CONNACK. */
 
-			connack_callback(mosq, MQTT_RC_UNSUPPORTED_PROTOCOL_VERSION, connect_flags, NULL);
+			log__printf(mosq, MOSQ_LOG_DEBUG, "Client %s received CONNACK (%d)", mosq->id, reason_code);
+			callback__on_connect(mosq, MQTT_RC_UNSUPPORTED_PROTOCOL_VERSION, connect_flags, NULL);
 			return rc;
 		}else if(rc){
 			return rc;
@@ -108,7 +84,11 @@ int handle__connack(struct mosquitto *mosq)
 	mosq->msgs_out.inflight_quota = mosq->msgs_out.inflight_maximum;
 	message__reconnect_reset(mosq);
 
-	connack_callback(mosq, reason_code, connect_flags, properties);
+	log__printf(mosq, MOSQ_LOG_DEBUG, "Client %s received CONNACK (%d)", mosq->id, reason_code);
+	if(reason_code == MQTT_RC_SUCCESS){
+		mosq->reconnects = 0;
+	}
+	callback__on_connect(mosq, reason_code, connect_flags, properties);
 	mosquitto_property_free_all(&properties);
 
 	switch(reason_code){
