@@ -188,7 +188,6 @@ int mosquitto_reinitialise(struct mosquitto *mosq, const char *id, bool clean_st
 	mosq->on_unsubscribe = NULL;
 	mosq->host = NULL;
 	mosq->port = 1883;
-	mosq->in_callback = false;
 	mosq->reconnect_delay = 1;
 	mosq->reconnect_delay_max = 1;
 	mosq->reconnect_exponential_backoff = false;
